# magic-squares

./: .gitignore  CMakeLists.txt  README.md  arrangement.py  build-sc.sh  build.sh  enumeration.py  rowsearch.py  run.sh  submit-sc-enum.sh  submit-sc.sh
data/: stats_abba.md
research/: ideas.md
runs/: .gitignore  input_0507_r1  input_0507_r2  input_0507_r3  input_0508_r1  input_0508_r2  input_0508_r2_enum  input_0509_r1  input_0509_r1_enum  input_0509_r1_enum2  input_0510_r1  input_0510_r2
src/c/: .gitignore  CMakeLists.txt  Makefile  README.md  arrangement  arrangement.c  arrangement.h  bitset.c  bitset.h  enumeration.cpp  labelling.c  labelling.h  new_inters.c  new_inters.h  search.c  search.h  types.h
src/py/: README.md  arrangement.py  enumeration.py  graph.py  postprocess.py  rowsearch.py  verifier.py  why.txt
stats/: stats_aardvark.csv  stats_abba.md  stats_short.txt
tests/: P_10_4_3_2_S_327.txt  P_10_4_3_2_S_350.txt  P_10_6_3_1_0_1_S_360.txt  P_10_6_3_1_0_1_S_648.txt  P_11_4_3_1_1_S_289.txt  P_11_4_3_1_1_S_494.txt  P_9_4_2_2_1_1_S_316.txt  P_9_4_2_2_1_1_S_640.txt  README.md
