add_executable(arrangement_5 arrangement.c bitset.c search.c labelling.c)
add_executable(arrangement_6 arrangement.c bitset.c search.c labelling.c)
add_executable(arrangement_7 arrangement.c bitset.c search.c labelling.c)
target_compile_definitions(arrangement_5 PUBLIC VEC_SIZE=5)
target_compile_definitions(arrangement_6 PUBLIC VEC_SIZE=6)
target_compile_definitions(arrangement_7 PUBLIC VEC_SIZE=6)
